Fixed minor bugs.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -107,6 +107,9 @@ jtrp.report.is.col.jtrp_col_type=T
 jtrp.report.is.col.jtrp_col_expected=Expected
 jtrp.report.is.col.jtrp_col_expected.help=Logged + Remaining
 
+jtrp.report.is.col.jtrp_col_type.tooltip=Issue Type
+jtrp.report.is.col.jtrp_col_priority.tooltip=Priority
+
 jtrp.report.export.is.col.jtrp_col_assignee=Assignee
 jtrp.report.export.is.col.jtrp_col_estimated=Estimated (s)
 jtrp.report.export.is.col.jtrp_col_issue=Issue Key
