Date timestamp validation added.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -22,6 +22,9 @@ jtrp.plugin.reporting.permission.desc=By default all users have permission to vi
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
 
+plugin.invalid_startTime= Invalid Start Time!
+plugin.invalid_endTime= Invalid End Time!
+plugin.invalid_createDate=Invalid Create Date format!
 plugin.wrong.jql=Error in the JQL Query. Check the filter settings.
 jtrp.plugin.missing.jql=You must choose a valid filter.
 jtrp.plugin.no_browsable_project_ids=Your search criteria did not match any project.
