--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -22,6 +22,9 @@ jtrp.plugin.reporting.permission.desc=Alap\u00e9rtelmezetten minden felhaszn\u00
 jtrp.plugin.reporting.pagination=Oldalm\u00e9ret
 jtrp.plugin.reporting.pagination.desc=A Worklog details \u00e9s a Quick summary riportok lapm\u00e9ret\u00e9nek be\u00e1ll\u00edt\u00e1sa. Be\u00e1ll\u00edthat\u00f3, hogy az adatok maximum h\u00e1ny sorban jelenjenek meg egy lapon.
 
+plugin.invalid_startTime= Invalid Start Time!
+plugin.invalid_endTime= Invalid End Time!
+plugin.invalid_createDate=Invalid Create Date format!
 plugin.wrong.jql=Hiba a JQL lek\u00e9rdez\u00e9sben. Ellen\u0151rizze a sz\u0171r\u0151 be\u00e1ll\u00edt\u00e1s\u00e1t!
 jtrp.plugin.missing.jql=V\u00e1lasztania kell egy \u00e9rv\u00e9nyes sz\u0171r\u0151t!
 jtrp.plugin.no_browsable_project_ids=A keres\u00e9si felt\u00e9teleknek nem felelt meg egy projekt sem.
