Fixed worklog based columns name in the columns selector.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -54,6 +54,9 @@ jtrp.report.wd.col.jtrp_col_worklogCreated=Worklog Created
 jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 
+jtrp.report.wd.col.jtrp_col_startTime.select=Worklog Start Time
+jtrp.report.wd.col.jtrp_col_timeSpent.select=Worklog Time Spent
+jtrp.report.wd.col.jtrp_col_user.select=User (Worklog Author)
 jtrp.report.wd.col.jtrp_col_type.tooltip=Issue Type
 jtrp.report.wd.col.jtrp_col_priority.tooltip=Priority
 
