Reporting admin settings extended with Browse Users groups.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -19,6 +19,8 @@ plugin.cancel=Cancel
 
 jtrp.plugin.reporting.permission=Permission to use Reporting
 jtrp.plugin.reporting.permission.desc=By default all users have permission to view and use Timetracker Reporting. If you would like to restrict usability, you can add JIRA groups here that have permits to use Reporting.
+jtrp.plugin.reporting.browse.user=Permission to browse other users' worklogs
+jtrp.plugin.reporting.browse.user.desc=By default, each user has permission to browse other users' worklogs. Add groups if you want to restrict this functionality. Users who do not belong to one of the given groups can only see their own worklogs.
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
 
