--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -30,6 +30,7 @@ plugin.invalid_createDate=Invalid Create Date format!
 plugin.wrong.jql=Hiba a JQL lek\u00e9rdez\u00e9sben. Ellen\u0151rizze a sz\u0171r\u0151 be\u00e1ll\u00edt\u00e1s\u00e1t!
 jtrp.plugin.missing.jql=V\u00e1lasztania kell egy \u00e9rv\u00e9nyes sz\u0171r\u0151t!
 jtrp.plugin.no_browsable_project_ids=A keres\u00e9si felt\u00e9teleknek nem felelt meg egy projekt sem.
+jtrp.plugin.no.browse.permission=You don't have permission to browse other user's worklgos.
 
 jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.wd.col.jtrp_col_assignee=Assignee
