--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -24,8 +24,8 @@ jtrp.plugin.reporting.browse.user.desc=By default, each user has permission to b
 
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
-jtrp.plugin.reporting.popup.check=Show reporting popups
-jtrp.plugin.reporting.popup.check.desc=Set the reporting popups visibility.
+jtrp.plugin.reporting.popup.check=Show/hide reporting pop-ups
+jtrp.plugin.reporting.popup.check.desc=Change this to show or hide the tutorial/what's new pop-ups when you open reporting.
 
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
