localize message in reporting.js

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -144,7 +144,8 @@ jtrp.report.export.us.col.jtrp_col_user.help=Worklog author display name
 
 jtrp.report.projectKeys=Project Keys
 
-jtrp.repor.no_browsable_project_ids=Not selected browsable projects.
+jtrp.report.worklogs_no_display_head=Some worklogs cannot be displayed
+jtrp.report.worklogs_no_display_body=You don't have the permission to browse the following projects:
 
 jtrp.report.btn.create.report=Create Report
 jtrp.report.btn.columns=Columns
