--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -144,7 +144,8 @@ jtrp.report.export.us.col.jtrp_col_user.help=Worklog author display name
 
 jtrp.report.projectKeys=Project Keys
 
-jtrp.repor.no_browsable_project_ids=Not selected browsable projects.
+jtrp.report.worklogs_no_display_head=Egyes k\u00f6nyvelt munkaid\u0151k nem jelen\u00edthet\u0151ek meg
+jtrp.report.worklogs_no_display_body=Nincs joga megtekinteni a k\u00f6vetkez\u0151 projekteket:
 
 jtrp.report.btn.create.report=Riport k\u00e9sz\u00edt\u00e9s
 jtrp.report.btn.columns=Oszlopok
