Added empty result info message to reporting page.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -146,6 +146,8 @@ jtrp.report.projectKeys=Project Keys
 
 jtrp.report.worklogs_no_display_head=Some worklogs cannot be displayed
 jtrp.report.worklogs_no_display_body=You don't have the permission to browse the following projects:
+jtrp.report.result_not_found_head=No worklogs were found to match your search
+jtrp.report.result_not_found_body=Try modifying your search criteria
 
 jtrp.report.btn.create.report=Create Report
 jtrp.report.btn.columns=Columns
