--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -146,6 +146,8 @@ jtrp.report.projectKeys=Project Keys
 
 jtrp.report.worklogs_no_display_head=Egyes k\u00f6nyvelt munkaid\u0151k nem jelen\u00edthet\u0151ek meg
 jtrp.report.worklogs_no_display_body=Nincs joga megtekinteni a k\u00f6vetkez\u0151 projekteket:
+jtrp.report.result_not_found_head=Nincs megjelen\u00edthet\u0151 munkaid\u0151 a keres\u00e9snek megfelel\u0151en
+jtrp.report.result_not_found_body=Pr\u00f3b\u00e1lja meg megv\u00e1ltoztatni a keres\u00e9si felt\u00e9teleket
 
 jtrp.report.btn.create.report=Riport k\u00e9sz\u00edt\u00e9s
 jtrp.report.btn.columns=Oszlopok
