--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -25,7 +25,7 @@ jtrp.plugin.reporting.browse.user.desc=By default, each user has permission to b
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
 jtrp.plugin.reporting.popup.check=Show reporting pop-ups
-jtrp.plugin.reporting.popup.check.desc=Check this to show the tutorial/what's new pop-ups when you open reporting.
+jtrp.plugin.reporting.popup.check.desc=Check this to show the tutorial/what''s new pop-ups when you open reporting. Note that this setting may change after version update to make sure you get notified of the new features.
 
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
