v2.x-JIRAPLUGIN-291-MISSINGS_AUI_UPDATE
Missings report extended with hours.
Added better paging solution.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -227,3 +227,7 @@ jtrp.tutorial.tab.header.new.1=NEW: Permission settings
 jtrp.tutorial.tab.header.new.2=NEW: User settings
 jtrp.tutorial.tab.text.new.1=By default, each user has permission to browse other users' worklogs. Now your Administrator can add groups if you want to restrict this functionality. Users who do not belong to one of the given groups can only see their own worklogs.
 jtrp.tutorial.tab.text.new.2=We are introducing the Reporting user setting, where you can set the initial page length of Worklog details and Quick summary reports.
+
+##Missings Days report
+plugin.missings.hours=Hours
+plugin.missings.dates=Dates
