v2.x-JIRAPLUGIN-298-TIMETARCKER_PERMISSIONS
Added Plugin and Timetracker permissons.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -105,6 +105,10 @@ plugin.settings.analytics=Analytics
 plugin.settings.analytics.help=In order to enhance the features of the add-on, we need to understand how our customers use Timetracker. To achieve this, we would like to collect anonymous data about the usage: <ul> <li> Anonymized IP address (to be able to create statistics about the usage in the different countries) </li><li> Hash of the domain address of the JIRA system (we will not know your domain address) </li><li> Hash of the user (we will not know your original user id) </li><li> Usage count of the time tracking feature </li><li> Usage count of the Missing Days Report </li><li> Usage count of the Chart Report </li><li> Usage count of the Table Report </li><li> User Agent of the browser being used </li><li> Timetracker version number </li><li> JIRA version number </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enable
 plugin.settings.analytics.radiobutton.disable=Disable
+plugin.setting.plugin.permission=Permission to use the Plugin
+plugin.setting.plugin.permission.desc=By default all users have permission to use Timetracker & Reporting Plugin. If you would like to restrict usability, you can add JIRA groups here that have permits to use the Plugin.
+plugin.setting.timetracker.permission=Permission to use Timetarcker
+plugin.setting.timetracker.permission.desc=By default all users have permission to view and use Timetracker. If you would like to restrict usability, you can add JIRA groups here that have permits to use Timetracker.
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
