--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -105,6 +105,11 @@ plugin.settings.analytics=Analitika
 plugin.settings.analytics.help=Annak \u00e9rdek\u00e9ben, hogy min\u00e9l jobb \u00e9s hasznosabb \u00faj funkci\u00f3kkal tudjunk szolg\u00e1lni, szeretn\u00e9nk meg\u00e9rteni, hogy a felhaszn\u00e1l\u00f3k hogyan haszn\u00e1lj\u00e1k a Timetracker-t. Ehhez szeretn\u00e9nk az al\u00e1bbi anonim adatokat gy\u0171jteni az add-on haszn\u00e1lat\u00e1r\u00f3l: <ul><li> Anonimiz\u00e1lt IP-c\u00edm (geolok\u00e1ci\u00f3 meghat\u00e1roz\u00e1s\u00e1hoz) </li><li> A JIRA domian c\u00edm\u00e9nek hash-e (nem fogadjuk \u00e9s t\u00e1roljuk a val\u00f3di c\u00edmet) </li><li> A felhaszn\u00e1l\u00f3 azonos\u00edt\u00f3 hash-e (nem fogadjuk \u00e9s t\u00e1roljuk a val\u00f3di felhaszn\u00e1l\u00f3i azonos\u00edt\u00f3t) </li><li> A time tracking funkci\u00f3 haszn\u00e1lata </li><li> A Missing Days Report haszn\u00e1lata </li><li> A Chart Report haszn\u00e1lata </li><li> A Table Report haszn\u00e1lata </li><li> B\u00f6ng\u00e9sz\u0151 User Agent </li><li> Timetracker verzi\u00f3sz\u00e1m </li><li> JIRA verzi\u00f3sz\u00e1m </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enged\u00e9lyez
 plugin.settings.analytics.radiobutton.disable=Letilt
+plugin.setting.plugin.permission=Plugin haszn\u00e1lat\u00e1nak enged\u00e9lyez\u00e9se
+plugin.setting.plugin.permission.desc=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3 l\u00e1thatja \u00e9s haszn\u00e1lhatja a Timetracker & Reporting plugint. JIRA csoportok megad\u00e1s\u00e1val korl\u00e1tozhat\u00f3 a l\u00e1that\u00f3s\u00e1g \u00e9s haszn\u00e1lhat\u00f3s\u00e1g a csoporttagok sz\u00e1m\u00e1ra.
+plugin.setting.timetracker.permission=Timetracker haszn\u00e1lat\u00e1nak enged\u00e9lyez\u00e9se
+plugin.setting.timetracker.permission.desc=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3 l\u00e1thatja \u00e9s haszn\u00e1lhatja a Timetracker funkci\u00f3t. JIRA csoportok megad\u00e1s\u00e1val korl\u00e1tozhat\u00f3 a l\u00e1that\u00f3s\u00e1g \u00e9s haszn\u00e1lhat\u00f3s\u00e1g a csoporttagok sz\u00e1m\u00e1ra.
+
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint az elv\u00e1rt munkaid\u0151 egy napra.
