v2.x-JIRAPLUGIN-248-JTTP_AUI_UPDATE
JTTP AUI update (under development)

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -18,18 +18,12 @@ plugin.summary= Summary:
 plugin.month= Month
 plugin.week= Week
 plugin.day= Day
-plugin.start= Start
-plugin.end= End
 plugin.date= Date
-plugin.duration= Duration
-plugin.remaining= Remaining
-plugin.note= Note
 plugin.edit= Edit
 plugin.edit.all=Change Date For All
 plugin.save= Save
 plugin.settings= Settings
 plugin.delete= Delete
-plugin.actions= Actions
 plugin.add.worklog= Add Worklog
 plugin.start.time= Start Time
 plugin.end.time= End Time
@@ -62,6 +56,16 @@ plugin.parent.issue=Parent Issue:
 plugin.daily=Daily
 plugin.weekly=Weekly
 plugin.monthly=Monthly
+
+plugin.jttp-worklog-issue-type= T
+plugin.jttp-worklog-issue-type.tooltip= Issue Type
+plugin.jttp-worklog-issue-key= Issue
+plugin.jttp-worklog-start= Start
+plugin.jttp-worklog-end= End
+plugin.jttp-worklog-actions= Actions
+plugin.jttp-worklog-duration= Duration
+plugin.jttp-worklog-issue-remaining= Remaining
+plugin.jttp-worklog-description= Description
 
 plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.calendar=Calendar
