--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -18,18 +18,12 @@ plugin.summary= \u00d6sszes\u00edt\u00e9s:
 plugin.month= H\u00f3nap
 plugin.week= H\u00e9t
 plugin.day= Nap
-plugin.start= Kezd\u00e9s
-plugin.end= V\u00e9ge
 plugin.date= D\u00e1tum
-plugin.duration= Id\u0151tartam
-plugin.remaining=H\u00e1travan
-plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
 plugin.edit.all=\u00d6sszes D\u00e1tum Szerkeszt\u00e9se
 plugin.save= Ment\u00e9s
 plugin.settings= Be\u00e1ll\u00edt\u00e1sok
 plugin.delete= T\u00f6rl\u00e9s
-plugin.actions=M\u0171veletek
 plugin.add.worklog= Worklog Hozz\u00e1ad\u00e1sa
 plugin.start.time= Kezd\u00e9si id\u0151
 plugin.end.time= V\u00e9gz\u00e9si id\u0151
@@ -62,6 +56,16 @@ plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 plugin.daily=Napi
 plugin.weekly=Heti
 plugin.monthly=Havi
+
+plugin.jttp-worklog-issue-type= T
+plugin.jttp-worklog-issue-type.tooltip= Issue T\u00edpus
+plugin.jttp-worklog-issue-key= Issue
+plugin.jttp-worklog-start= Kezd\u00e9s
+plugin.jttp-worklog-end= V\u00e9ge
+plugin.jttp-worklog-actions= M\u0171veletek
+plugin.jttp-worklog-duration= Id\u0151tartam
+plugin.jttp-worklog-issue-remaining= H\u00e1travan
+plugin.jttp-worklog-description= Jegyzet
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
 plugin.setting.calendar=Napt\u00e1r
