v2.x-JIRAPLUGIN-248-JTTP_AUI_UPDATE
Summarys updated (under development)

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-plugin.summary= Summary:
+plugin.summary= Summary
 plugin.month= Month
 plugin.week= Week
 plugin.day= Day
@@ -33,7 +33,6 @@ plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
 plugin.now= Now
 plugin.work= Work
-plugin.real.work= Real Work
 plugin.dates= Dates
 plugin.search= Search
 plugin.from= From
@@ -66,6 +65,9 @@ plugin.jttp-worklog-actions= Actions
 plugin.jttp-worklog-duration= Duration
 plugin.jttp-worklog-issue-remaining= Remaining
 plugin.jttp-worklog-description= Description
+
+plugin.summary.real= Real Work
+plugin.summary.total= Total
 
 plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.calendar=Calendar
