--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-plugin.summary= \u00d6sszes\u00edt\u00e9s:
+plugin.summary= \u00d6sszes\u00edt\u00e9s
 plugin.month= H\u00f3nap
 plugin.week= H\u00e9t
 plugin.day= Nap
@@ -33,7 +33,6 @@ plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
 plugin.work= Munka
-plugin.real.work= Val\u00f3s Munka
 plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
 plugin.from= Innent\u0151l
@@ -66,6 +65,10 @@ plugin.jttp-worklog-actions= M\u0171veletek
 plugin.jttp-worklog-duration= Id\u0151tartam
 plugin.jttp-worklog-issue-remaining= H\u00e1travan
 plugin.jttp-worklog-description= Jegyzet
+
+plugin.summary.real= Val\u00f3s Munka
+plugin.summary.total= Teljes
+
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
 plugin.setting.calendar=Napt\u00e1r
