--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -25,7 +25,7 @@ jtrp.plugin.reporting.browse.user.desc=Alap\u00e9rtelmezetten minden felhaszn\u0
 jtrp.plugin.reporting.pagination=Oldalm\u00e9ret
 jtrp.plugin.reporting.pagination.desc=A Worklog details \u00e9s a Quick summary riportok lapm\u00e9ret\u00e9nek be\u00e1ll\u00edt\u00e1sa. Be\u00e1ll\u00edthat\u00f3, hogy az adatok maximum h\u00e1ny sorban jelenjenek meg egy lapon.
 jtrp.plugin.reporting.popup.check=Reporting pop-up megjenel\u00edt\u00e9se
-jtrp.plugin.reporting.popup.check.desc=\u00c1ll\u00edtsa be, hogy a reporting megnyit\u00e1sakor az \u00fajdons\u00e1gokat bemutat\u00f3 pop-up megjelenjen.
+jtrp.plugin.reporting.popup.check.desc=Ne jel\u00f6lje (pip\u00e1lja) be, ha azt szeretn\u00e9, hogy a reporting megnyit\u00e1sakor az \u00fajdons\u00e1gokat bemutat\u00f3 pop-up megjelenjen.
 
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
