v2.x-JIRAPLUGIN-248-JTTP_AUI_UPDATE
jttp table notes fixed.
table report missings i18n prop fixed

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -55,6 +55,12 @@ plugin.parent.issue=Parent Issue:
 plugin.daily=Daily
 plugin.weekly=Weekly
 plugin.monthly=Monthly
+plugin.start= Start
+plugin.end= End
+plugin.duration= Duration
+plugin.remaining= Remaining
+plugin.note= Note
+plugin.real.work= Real Work
 
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue Type
