--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -55,6 +55,12 @@ plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 plugin.daily=Napi
 plugin.weekly=Heti
 plugin.monthly=Havi
+plugin.start= Kezd\u00e9s
+plugin.end= V\u00e9ge
+plugin.duration= Id\u0151tartam
+plugin.remaining= H\u00e1travan
+plugin.real.work= Val\u00f3s Munka
+plugin.note= Jegyzet
 
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue T\u00edpus
