v2.x-JIRAPLUGIN-248-JTTP_AUI_UPDATE
Edit all action fixed. Desing erros and minor logical bug fixeds. (UNDER
DEVELOPMENT)

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -127,7 +127,8 @@ plugin.missing.days.hours=Check the worklog spent time is equal or greater to th
 plugin.missing.days.nonworking=Excluding the non-working issues.
 plugin.statistics.message= The number of the queried dates is:
 plugin.no.dates= No date to display!
-plugin.no.worklogs= No data to display!
+plugin.no.worklogs.title= No data to display!
+plugin.no.worklogs= There is no work logged to this date
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
 plugin.invalid_durationTime= Invalid Duration Time!
