--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -128,7 +128,8 @@ plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u015
 plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa.
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1ltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma:
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
-plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
+plugin.no.worklogs.title= Nincs megjelen\u00edtend\u0151 adat!
+plugin.no.worklogs= Nincs munkaid\u0151 r\u00f6gz\u00edtve az adott d\u00e1tumhoz
 plugin.invalid_startTime= \u00c9rv\u00e9nytelen kezd\u00e9si id\u0151!
 plugin.invalid_endTime= \u00c9rv\u00e9nytelen v\u00e9gz\u00e9si id\u0151!
 plugin.invalid_durationTime= \u00c9rv\u00e9nytelen id\u0151tartam!
