v2.x-JIRAPLUGIN-304-FINAL_DETIALS
Fixed calender user settings option.
CSS fixed.
Icons repalced.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -83,15 +83,14 @@ plugin.setting.ispopup=Type
 plugin.setting.isactualdate=Default date
 plugin.setting.non.working.issues= Non-working issues
 plugin.setting.nonestimated.issues= Non-estimated issues
-plugin.setting.popup=Pop-up
-plugin.setting.inline=Inline
-plugin.setting.both=Both types of calendars
+plugin.setting.popup.default=Default
+plugin.setting.popup.both=Default and Inline
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
 plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
-plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
+plugin.setting.ispopup.help=You can set the calendar appearance. You can use the default popup or the default and inline calendar type in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
@@ -144,6 +143,7 @@ plugin.wrong.dates= The date parameters of the query are not set appropriate.
 plugin.calendar.logged.coloring.fail= The calendar fail to collect the month logged days.
 plugin.worklog.permission.warning= Maybe there are worklogs matching the conditions but you don't have permission to see them.
 plugin.exceeded.year= The maximum queryable period is one year.
+plugin.nopermission_issue.detials=Make sure you have the Work on Issues permission. Check Issue status too. There may be a restriction in the workflow.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
