--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -84,15 +84,14 @@ plugin.setting.ispopup=T\u00edpusa
 plugin.setting.isactualdate=Alap\u00e9rtelmezett d\u00e1tum
 plugin.setting.non.working.issues=Nem val\u00f3s munka feladatok
 plugin.setting.nonestimated.issues=Becs\u00fcletlen idej\u0171 feladatok
-plugin.setting.popup=Felugr\u00f3
-plugin.setting.inline=\u00c1lland\u00f3
-plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa napt\u00e1r
+plugin.setting.popup.default=Alap\u00e9rtelmezett
+plugin.setting.popup.both=Alap\u00e9rtelmezett \u00e9s \u00e1lland\u00f3
 plugin.setting.current=Mai d\u00e1tum
 plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
 plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak az id\u0151 k\u00f6vet\u00e9s (Time Tracking) be\u00e1ll\u00edt\u00e1sn\u00e1l megadott munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00e1l\u00f3 nem dolgozik ennyit egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151napnak sz\u00e1m\u00edt.
 plugin.setting.exclude.dates=Nem sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.include.dates=Bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok
-plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00fa napt\u00e1rt a Timetracker oldal\u00e1n.
+plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatod az alap\u00e9rtelmezett felugr\u00f3 vagy az alap\u00e9rtelmezett \u00e9s \u00e1lland\u00f3 l\u00e1that\u00f3s\u00e1g\u00fa napt\u00e1rt a Timetracker oldal\u00e1n.
 plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a napt\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki nem t\u00f6lt\u00f6tt napj\u00e1t mutassa.
 plugin.setting.non.working.issues.help=Az issue-k amelyek megfelelnek a list\u00e1ban szerepl\u0151 regul\u00e1ris kifejez\u00e9seknek nem lesznek figyelembe v\u00e9ve a "Val\u00f3s Munka \u00d6sszes\u00edt\u00e9s"-ben.
 plugin.setting.nonestimated.issues.help=Alap\u00e9rtelmezetten egy lev\u00e9l lesz k\u00fcldve minden nap a nem lez\u00e1rt issue-kr\u00f3l ahol worklog keletkezett de nincs t\u00f6bb h\u00e1tral\u00e9v\u0151 id\u0151, issue reporter \u00e9s a project vezet\u0151 kapja a levelet. Ezzel a be\u00e1ll\u00edt\u00e1ssal az adminisztr\u00e1torok egy regul\u00e1ris kifejezez\u00e9s list\u00e1t adhatnak meg, hogy melyik issue-k maradjanak ki az ellen\u0151rz\u00e9sb\u0151l. P\u00e9ld\u00e1k: Ha nem akarsz email-t kapni semmir\u0151l, akkor a ".*" be\u00e1ll\u00edt\u00e1sra van sz\u00fcks\u00e9ged. Ha nem akarod a "MYPROJECT" bele\u00e9rteni akkor neked a k\u00f6vetkez\u0151 kifejez\u00e9st kell megadnod a list\u00e1ba "MYPROJECT-.*".
@@ -144,6 +143,7 @@ plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
 plugin.wrong.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
 plugin.calendar.logged.coloring.fail= A napt\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
 plugin.worklog.permission.warning= El\u0151fordulhat, hogy l\u00e9teznek a felt\u00e9teleknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
+plugin.nopermission_issue.detials=Bizonyosodjon meg r\u00f3la hogy van 'Work on Issues' jogosults\u00e1ga. Vizsg\u00e1lja meg az Issue st\u00e1tuszt is, mert lehet, hogy megszor\u00edt\u00e1s vonatkozik r\u00e1.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
