v2.x-JIRAPLUGIN-322-REPORTING_SWITCHER
Changed the reporting switcher.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -194,6 +194,7 @@ jtrp.picker.all.type=Type: All
 jtrp.picker.all.status=Status: All
 
 jtrp.picker.none.filter=Filter: None
+jtrp.select.report=Select report
 
 jtrp.picker.user.tooltip=Select users, or the none option to select from groups.
 jtrp.picker.group.tooltip=Select groups, or the none option to select from users.
