v2.x-JIRAPLUGIN-248-RE_DESIGN_R13
Added today button function.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -61,6 +61,8 @@ plugin.duration= Duration
 plugin.remaining= Remaining
 plugin.note= Note
 plugin.real.work= Real Work
+plugin.today.button=Today
+plugin.header.add.worklog=Add Worklog
 
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue Type
