--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -61,6 +61,8 @@ plugin.duration= Id\u0151tartam
 plugin.remaining= H\u00e1travan
 plugin.real.work= Val\u00f3s Munka
 plugin.note= Jegyzet
+plugin.today.button=Ma
+plugin.header.add.worklog=Worklog Hozz\u00e1ad\u00e1s
 
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue T\u00edpus
