--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -81,18 +81,19 @@ plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.calendar=Calendar
 plugin.setting.calendar.settings.help=Unified calendar settings for all of the users.
 plugin.setting.working.day=Working Days
-plugin.setting.ispopup=Type
+plugin.setting.progress.ind.appearance=Progress indicator appearance
+plugin.setting.progress.ind=Type
+plugin.setting.progress.ind.daily=Daily
+plugin.setting.progress.ind.summary=Summary (d/w/m)
+plugin.setting.progress.ind.help=You can switch between a simple daily indicator or the summary indicator that displays the daily, weekly and monthly information.
 plugin.setting.isactualdate=Default date
 plugin.setting.non.working.issues= Non-working issues
 plugin.setting.nonestimated.issues= Non-estimated issues
-plugin.setting.popup.default=Default
-plugin.setting.popup.both=Default and Inline
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
 plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
-plugin.setting.ispopup.help=You can set the calendar appearance. You can use the default popup or the default and inline calendar type in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
