v2.x-JIRAPLUGIN-317-ROUND_REMAINING_CHECKBOX
Temporary changes

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -120,6 +120,9 @@ plugin.setting.plugin.permission=Permission to use the Plugin
 plugin.setting.plugin.permission.desc=By default all users have permission to view and use Timetracker & Reporting Plugin. If you would like to restrict usability, you can add JIRA groups here that have permits to use the Plugin.
 plugin.setting.timetracker.permission=Permission to use Timetracker
 plugin.setting.timetracker.permission.desc=By default all users have permission to view and use Timetracker's time tacking functionality. If you would like to restrict usability, you can add JIRA groups here that have permits to use Timetracker.
+plugin.setting.worklog.data.appearance=Worklog data appearance
+plugin.setting.rounded.remaining=Displays rounded Remaining time
+plugin.setting.rounded.remaining.help=You can turn on/off the remaining time rounding.
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
