Localize words in tool tips.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -64,6 +64,11 @@ plugin.real.work= Real Work
 plugin.today.button=Today
 plugin.header.add.worklog=Add Worklog
 
+plugin.progress.expected=Expected
+plugin.progress.total=Total
+plugin.progress.realWork=Real work
+plugin.progress.nonWork=Non-work
+
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue Type
 plugin.jttp-worklog-issue-key= Issue
