--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -64,6 +64,11 @@ plugin.note= Jegyzet
 plugin.today.button=Ma
 plugin.header.add.worklog=Worklog Hozz\u00e1ad\u00e1s
 
+plugin.progress.expected=Elv\u00e1rt
+plugin.progress.total=\u00d6sszes
+plugin.progress.realWork=Val\u00f3s munka
+plugin.progress.nonWork=Nem val\u00f3s munka
+
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue T\u00edpus
 plugin.jttp-worklog-issue-key= Issue
