Ongoing development of epic link in work log details report.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -91,6 +91,7 @@ jtrp.report.export.wd.col.jtrp_col_user.help=Worklog author display name
 jtrp.report.export.wd.col.jtrp_col_worklogCreated=Worklog Created
 jtrp.report.export.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.export.wd.col.jtrp_col_worklogUpdated=Worklog Updated
+jtrp.report.wd.col.jtrp_col_issueEpicLink=Epic Link
 
 jtrp.report.ps.col.jtrp_col_estimated=Estimated
 jtrp.report.ps.col.jtrp_col_expectedTotal=Total Expected
