--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -60,6 +60,7 @@ jtrp.report.wd.col.jtrp_col_user.help=Worklog author display name
 jtrp.report.wd.col.jtrp_col_worklogCreated=Worklog Created
 jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
+jtrp.report.wd.col.jtrp_col_issueEpicLink=Epic Link
 
 jtrp.report.wd.col.jtrp_col_startTime.select=Worklog Start Time
 jtrp.report.wd.col.jtrp_col_timeSpent.select=Worklog Time Spent
