--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -154,8 +154,8 @@ jtrp.report.btn.create.report=Riport k\u00e9sz\u00edt\u00e9s
 jtrp.report.btn.columns=Oszlopok
 
 jtrp.report.btn.export=Export
-jtrp.report.btn.export.all=(Excel) Minden mez\u0151
-jtrp.report.btn.export.current=(Excel) Jelenlegi mez\u0151k
+jtrp.report.btn.export.all=(Excel) Minden oszlop
+jtrp.report.btn.export.current=(Excel) Jelenlegi oszlopok
 
 jtrp.report.head.worklog.detials=Munkanapl\u00f3 r\u00e9szletek
 jtrp.report.head.quick.summary= \u00d6sszegz\u00e9s
