Fix empty user name.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -35,6 +35,7 @@ jtrp.plugin.missing.jql=V\u00e1lasztania kell egy \u00e9rv\u00e9nyes sz\u0171r\u
 jtrp.plugin.no_browsable_project_ids=A keres\u00e9si felt\u00e9teleknek nem felelt meg egy projekt sem.
 jtrp.plugin.no.browse.permission=You don't have permission to browse other user's worklgos.
 jtrp.plugin.invalid.issue.key=Invalid Issue Key
+jtrp.plugin.anonymus=Anonymus
 
 jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.wd.col.jtrp_col_assignee=Assignee
