--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -35,6 +35,7 @@ jtrp.plugin.missing.jql=You must choose a valid filter.
 jtrp.plugin.no_browsable_project_ids=Your search criteria did not match any project.
 jtrp.plugin.no.browse.permission=You don't have permission to browse other user's worklgos.
 jtrp.plugin.invalid.issue.key=Invalid Issue Key
+jtrp.plugin.anonymus=Anonymus
 
 jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.wd.col.jtrp_col_assignee=Assignee
