--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -154,8 +154,10 @@ jtrp.report.btn.create.report=Create Report
 jtrp.report.btn.columns=Columns
 
 jtrp.report.btn.export=Export
-jtrp.report.btn.export.all=(Excel) All fields
-jtrp.report.btn.export.current=(Excel) Current Fields
+jtrp.report.btn.export.excel.all=(Excel) All fields
+jtrp.report.btn.export.excel.current=(Excel) Current Fields
+jtrp.report.btn.export.csv.all=(CSV) All fields
+jtrp.report.btn.export.csv.current=(CSV) Current Fields
 
 jtrp.report.head.worklog.detials=Time Tracking Details
 jtrp.report.head.quick.summary=Quick Summary
