v2.x-JIRAPLUGIN-355-LOGGED_TIME_EXPORT_FORMAT

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -26,6 +26,10 @@ jtrp.plugin.reporting.pagination=Oldalm\u00e9ret
 jtrp.plugin.reporting.pagination.desc=A Worklog details \u00e9s a Quick summary riportok lapm\u00e9ret\u00e9nek be\u00e1ll\u00edt\u00e1sa. Be\u00e1ll\u00edthat\u00f3, hogy az adatok maximum h\u00e1ny sorban jelenjenek meg egy lapon.
 jtrp.plugin.reporting.popup.check=Reporting pop-up megjenel\u00edt\u00e9se
 jtrp.plugin.reporting.popup.check.desc=Ne jel\u00f6lje (pip\u00e1lja) be, ha azt szeretn\u00e9, hogy a reporting megnyit\u00e1sakor az \u00fajdons\u00e1gokat bemutat\u00f3 pop-up megjelenjen.
+jtrp.plugin.reporting.time.format=A k\u00f6nyvelt id\u0151 form\u00e1tuma export\u00e1l\u00e1skor
+jtrp.plugin.reporting.time.format.sec=M\u00e1sodperc
+jtrp.plugin.reporting.time.format.def=Alap\u00e9rtelmezett (w/d/h/m)
+jtrp.plugin.reporting.time.format.desc=V\u00e1lassza ki az id\u0151 form\u00e1tum\u00e1t az export\u00e1lt reportokban.
 
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
