v2.x-JIRAPLUGIN-322-RC_IMPROVEMENTS
* js cache fix
* doExecute date parse fix
* i18n fix

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -99,7 +99,7 @@ plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
 plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
-plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
+plugin.setting.isactualdate.help=You can choose the calendar default date to show. Choose between the current date or the last week first unfilled day.
 plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
 plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays). The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
@@ -116,7 +116,7 @@ plugin.setting.endtime.value=EndTime Change value
 plugin.setting.endtime.help=You can set the value of the endTime input field Now button rounding function. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.min= Minute(s)
 plugin.setting.coloring= Highlights
-plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).
+plugin.setting.coloring.help=The highlight shows the excluded dates like weekends (red number) and the days with work log (yellow background).
 plugin.setting.fdow=First day of the week
 plugin.setting.fdow.sunday=Sunday
 plugin.setting.fdow.monday=Monday
