Finish work log details and summary csv export.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -159,6 +159,9 @@ jtrp.report.btn.export.excel.current=(Excel) Jelenlegi mez\u0151k
 jtrp.report.btn.export.csv.all=(CSV) Minden mez\u0151
 jtrp.report.btn.export.csv.current=(CSV) Jelenlegi mez\u0151k
 
+jtrp.report.btn.summary.export.csv=(CSV) Export
+jtrp.report.btn.summary.export.excel=(Excel) Export
+
 jtrp.report.head.worklog.detials=Munkanapl\u00f3 r\u00e9szletek
 jtrp.report.head.quick.summary= \u00d6sszegz\u00e9s
 jtrp.report.grand.total=\u00d6sszes napl\u00f3zott id\u0151
