--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -159,6 +159,9 @@ jtrp.report.btn.export.excel.current=(Excel) Current Fields
 jtrp.report.btn.export.csv.all=(CSV) All fields
 jtrp.report.btn.export.csv.current=(CSV) Current Fields
 
+jtrp.report.btn.summary.export.csv=(CSV) Export
+jtrp.report.btn.summary.export.excel=(Excel) Export
+
 jtrp.report.head.worklog.detials=Time Tracking Details
 jtrp.report.head.quick.summary=Quick Summary
 jtrp.report.grand.total=Grand Total Logged
