--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -75,19 +75,19 @@ jtrp.report.export.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.export.wd.col.jtrp_col_assignee=Assignee
 jtrp.report.export.wd.col.jtrp_col_components=Components
 jtrp.report.export.wd.col.jtrp_col_created=Created
-jtrp.report.export.wd.col.jtrp_col_estimated=Estimated (s)
+jtrp.report.export.wd.col.jtrp_col_estimated=Estimated
 jtrp.report.export.wd.col.jtrp_col_fixVersions=Fix Versions
 jtrp.report.export.wd.col.jtrp_col_issueKey=Issue Key
 jtrp.report.export.wd.col.jtrp_col_issueSummary=Issue Summary
 jtrp.report.export.wd.col.jtrp_col_priority=P
 jtrp.report.export.wd.col.jtrp_col_project=Project
 jtrp.report.export.wd.col.jtrp_col_projectDescription=Project Description
-jtrp.report.export.wd.col.jtrp_col_remainingTime=Remaining (s)
+jtrp.report.export.wd.col.jtrp_col_remainingTime=Remaining
 jtrp.report.export.wd.col.jtrp_col_reporter=Reporter
 jtrp.report.export.wd.col.jtrp_col_resolution=Resolution
 jtrp.report.export.wd.col.jtrp_col_startTime=Start Time
 jtrp.report.export.wd.col.jtrp_col_status=Status
-jtrp.report.export.wd.col.jtrp_col_timeSpent=Time Spent (s)
+jtrp.report.export.wd.col.jtrp_col_timeSpent=Time Spent
 jtrp.report.export.wd.col.jtrp_col_type=T
 jtrp.report.export.wd.col.jtrp_col_updated=Updated
 jtrp.report.export.wd.col.jtrp_col_user=User
@@ -104,13 +104,13 @@ jtrp.report.ps.col.jtrp_col_remaining=Remaining
 jtrp.report.ps.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
 
-jtrp.report.export.ps.col.jtrp_col_estimated=Estimated (s)
-jtrp.report.export.ps.col.jtrp_col_expectedTotal=Total Expected (s)
+jtrp.report.export.ps.col.jtrp_col_estimated=Estimated
+jtrp.report.export.ps.col.jtrp_col_expectedTotal=Total Expected
 jtrp.report.export.ps.col.jtrp_col_project=Project
 jtrp.report.export.ps.col.jtrp_col_projectKey=Key
-jtrp.report.export.ps.col.jtrp_col_remaining=Remaining (s)
-jtrp.report.export.ps.col.jtrp_col_totalLogged=Total Logged (s)
-jtrp.report.export.ps.col.jtrp_col_expectedTotal.help=Total Logged (s) + Remaining (s)
+jtrp.report.export.ps.col.jtrp_col_remaining=Remaining
+jtrp.report.export.ps.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.export.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
 
 jtrp.report.is.col.jtrp_col_assignee=Assignee
 jtrp.report.is.col.jtrp_col_estimated=Estimated
@@ -128,22 +128,22 @@ jtrp.report.is.col.jtrp_col_type.tooltip=Issue Type
 jtrp.report.is.col.jtrp_col_priority.tooltip=Priority
 
 jtrp.report.export.is.col.jtrp_col_assignee=Assignee
-jtrp.report.export.is.col.jtrp_col_estimated=Estimated (s)
+jtrp.report.export.is.col.jtrp_col_estimated=Estimated
 jtrp.report.export.is.col.jtrp_col_issue=Issue Key
 jtrp.report.export.is.col.jtrp_col_issueSummary=Issue Summary
 jtrp.report.export.is.col.jtrp_col_priority=P
-jtrp.report.export.is.col.jtrp_col_remaining=Remaining (s)
+jtrp.report.export.is.col.jtrp_col_remaining=Remaining
 jtrp.report.export.is.col.jtrp_col_status=Status
-jtrp.report.export.is.col.jtrp_col_totalLogged=Logged (s)
+jtrp.report.export.is.col.jtrp_col_totalLogged=Logged
 jtrp.report.export.is.col.jtrp_col_type=T
-jtrp.report.export.is.col.jtrp_col_expected=Expected (s)
-jtrp.report.export.is.col.jtrp_col_expected.help=Logged (s) + Remaining (s)
+jtrp.report.export.is.col.jtrp_col_expected=Expected
+jtrp.report.export.is.col.jtrp_col_expected.help=Logged + Remaining
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
 jtrp.report.us.col.jtrp_col_user.help=Worklog author display name
 
-jtrp.report.export.us.col.jtrp_col_totalLogged=Total Logged (s)
+jtrp.report.export.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.export.us.col.jtrp_col_user=User
 jtrp.report.export.us.col.jtrp_col_user.help=Worklog author display name
 
