v3.x-JIRAPLUGIN-355-LOGGED_TIME_EXPORT_FORMAT
Radiobutton for changing the time format at export.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -26,6 +26,10 @@ jtrp.plugin.reporting.pagination=Oldalm\u00e9ret
 jtrp.plugin.reporting.pagination.desc=A Worklog details \u00e9s a Quick summary riportok lapm\u00e9ret\u00e9nek be\u00e1ll\u00edt\u00e1sa. Be\u00e1ll\u00edthat\u00f3, hogy az adatok maximum h\u00e1ny sorban jelenjenek meg egy lapon.
 jtrp.plugin.reporting.popup.check=Reporting pop-up megjenel\u00edt\u00e9se
 jtrp.plugin.reporting.popup.check.desc=Ne jel\u00f6lje (pip\u00e1lja) be, ha azt szeretn\u00e9, hogy a reporting megnyit\u00e1sakor az \u00fajdons\u00e1gokat bemutat\u00f3 pop-up megjelenjen.
+jtrp.plugin.reporting.time.format=A k\u00f6nyvelt id\u0151 form\u00e1tuma export\u00e1l\u00e1skor
+jtrp.plugin.reporting.time.format.sec=M\u00e1sodperc
+jtrp.plugin.reporting.time.format.def=Alap\u00e9rtelmezett (w/d/h/m)
+jtrp.plugin.reporting.time.format.desc=V\u00e1lassza ki az id\u0151 form\u00e1tum\u00e1t az export\u00e1lt reportokban.
 
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
@@ -71,19 +75,19 @@ jtrp.report.export.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.export.wd.col.jtrp_col_assignee=Assignee
 jtrp.report.export.wd.col.jtrp_col_components=Components
 jtrp.report.export.wd.col.jtrp_col_created=Created
-jtrp.report.export.wd.col.jtrp_col_estimated=Estimated (s)
+jtrp.report.export.wd.col.jtrp_col_estimated=Estimated
 jtrp.report.export.wd.col.jtrp_col_fixVersions=Fix Versions
 jtrp.report.export.wd.col.jtrp_col_issueKey=Issue Key
 jtrp.report.export.wd.col.jtrp_col_issueSummary=Issue Summary
 jtrp.report.export.wd.col.jtrp_col_priority=P
 jtrp.report.export.wd.col.jtrp_col_project=Project
 jtrp.report.export.wd.col.jtrp_col_projectDescription=Project Description
-jtrp.report.export.wd.col.jtrp_col_remainingTime=Remaining (s)
+jtrp.report.export.wd.col.jtrp_col_remainingTime=Remaining
 jtrp.report.export.wd.col.jtrp_col_reporter=Reporter
 jtrp.report.export.wd.col.jtrp_col_resolution=Resolution
 jtrp.report.export.wd.col.jtrp_col_startTime=Start Time
 jtrp.report.export.wd.col.jtrp_col_status=Status
-jtrp.report.export.wd.col.jtrp_col_timeSpent=Time Spent (s)
+jtrp.report.export.wd.col.jtrp_col_timeSpent=Time Spent
 jtrp.report.export.wd.col.jtrp_col_type=T
 jtrp.report.export.wd.col.jtrp_col_updated=Updated
 jtrp.report.export.wd.col.jtrp_col_user=User
@@ -100,13 +104,13 @@ jtrp.report.ps.col.jtrp_col_remaining=Remaining
 jtrp.report.ps.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
 
-jtrp.report.export.ps.col.jtrp_col_estimated=Estimated (s)
-jtrp.report.export.ps.col.jtrp_col_expectedTotal=Total Expected (s)
+jtrp.report.export.ps.col.jtrp_col_estimated=Estimated
+jtrp.report.export.ps.col.jtrp_col_expectedTotal=Total Expected
 jtrp.report.export.ps.col.jtrp_col_project=Project
 jtrp.report.export.ps.col.jtrp_col_projectKey=Key
-jtrp.report.export.ps.col.jtrp_col_remaining=Remaining (s)
-jtrp.report.export.ps.col.jtrp_col_totalLogged=Total Logged (s)
-jtrp.report.export.ps.col.jtrp_col_expectedTotal.help=Total Logged (s) + Remaining (s)
+jtrp.report.export.ps.col.jtrp_col_remaining=Remaining
+jtrp.report.export.ps.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.export.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
 
 jtrp.report.is.col.jtrp_col_assignee=Assignee
 jtrp.report.is.col.jtrp_col_estimated=Estimated
@@ -124,22 +128,22 @@ jtrp.report.is.col.jtrp_col_type.tooltip=Issue Type
 jtrp.report.is.col.jtrp_col_priority.tooltip=Priority
 
 jtrp.report.export.is.col.jtrp_col_assignee=Assignee
-jtrp.report.export.is.col.jtrp_col_estimated=Estimated (s)
+jtrp.report.export.is.col.jtrp_col_estimated=Estimated
 jtrp.report.export.is.col.jtrp_col_issue=Issue Key
 jtrp.report.export.is.col.jtrp_col_issueSummary=Issue Summary
 jtrp.report.export.is.col.jtrp_col_priority=P
-jtrp.report.export.is.col.jtrp_col_remaining=Remaining (s)
+jtrp.report.export.is.col.jtrp_col_remaining=Remaining
 jtrp.report.export.is.col.jtrp_col_status=Status
-jtrp.report.export.is.col.jtrp_col_totalLogged=Logged (s)
+jtrp.report.export.is.col.jtrp_col_totalLogged=Logged
 jtrp.report.export.is.col.jtrp_col_type=T
-jtrp.report.export.is.col.jtrp_col_expected=Expected (s)
-jtrp.report.export.is.col.jtrp_col_expected.help=Logged (s) + Remaining (s)
+jtrp.report.export.is.col.jtrp_col_expected=Expected
+jtrp.report.export.is.col.jtrp_col_expected.help=Logged + Remaining
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
 jtrp.report.us.col.jtrp_col_user.help=Worklog author display name
 
-jtrp.report.export.us.col.jtrp_col_totalLogged=Total Logged (s)
+jtrp.report.export.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.export.us.col.jtrp_col_user=User
 jtrp.report.export.us.col.jtrp_col_user.help=Worklog author display name
 
