Start implementing future log warning.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -175,3 +175,6 @@ jttp.nopermission.worklog.create=You don't have permission to create worklog in 
 jttp.error.title=Timetracker error
 jttp.error.message.title=Something went wrong!
 jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
+
+jttp-warning.future.log.title=Future log
+jttp-warning.future.log.message=Future log
