--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -176,5 +176,9 @@ jttp.error.title=Timetracker error
 jttp.error.message.title=Something went wrong!
 jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
 
-jttp-warning.future.log.title=Future log
-jttp-warning.future.log.message=Future log
+jttp.future.log.notification=Notifications
+jttp.future.log.notification.title=Notification of future work logging
+jttp.future.log.notification.help=You can turn on/off the notification of future work logging
+jttp-warning.future.log.title=Attention!
+jttp-warning.future.log.message=The work was logged at a future date.
+
