--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -176,5 +176,8 @@ jttp.error.title=Timetracker error
 jttp.error.message.title=Sajn\u00e1latos m\u00f3don hiba t\u00f6rt\u00e9nt!
 jttp.error.message.detials=K\u00e9rem jelezze a hib\u00e1t sz\u00e1munkra a Timetracker felhaszn\u00e1l\u00f3i visszajelz\u00e9s funcki\u00f3j\u00e1val, hogy azt min\u00e9l hamarabb jav\u00edthassuk. A visszajelz\u00e9s\u00e9ben \u00edrja le a hiba kiv\u00e1lt\u00e1sa el\u0151tti l\u00e9p\u00e9seket, hogy reproduk\u00e1lni tudjuk azt.
 
-jttp-warning.future.log.title=Future log
-jttp-warning.future.log.message=Future log
+jttp.future.log.notification=\u00c9rtes\u00edt\u00e9sek
+jttp.future.log.notification.title=\u00c9rtes\u00edt\u00e9s j\u00f6v\u0151beli worklog felv\u00e9ter\u0151l
+jttp.future.log.notification.help=Be vagy kikapcsolhatja az \u00e9rtes\u00edt\u00e9st j\u00f6v\u0151beli worklog felv\u00e9ter\u0151l
+jttp-warning.future.log.title=Figyelem!
+jttp-warning.future.log.message=A munka egy j\u00f6v\u0151beli d\u00e1tumra lett k\u00f6nyvelve.
