--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -78,6 +78,7 @@ plugin.jttp-worklog-actions= Actions
 plugin.jttp-worklog-duration= Duration
 plugin.jttp-worklog-issue-remaining= Remaining
 plugin.jttp-worklog-description= Description
+plugin.jttp-worklog-change-date-for-all=Select the date to which you want to move the logs.
 
 plugin.summary.real= Real Work
 plugin.summary.total= Total
