--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -78,6 +78,7 @@ plugin.jttp-worklog-actions= M\u0171veletek
 plugin.jttp-worklog-duration= Id\u0151tartam
 plugin.jttp-worklog-issue-remaining= H\u00e1travan
 plugin.jttp-worklog-description= Jegyzet
+plugin.jttp-worklog-change-date-for-all=V\u00e1lassza ki a d\u00e1tumot, ahova \u00e1t akarja mozgatni a logokat.
 
 plugin.summary.real= Val\u00f3s Munka
 plugin.summary.total= Teljes
